# voice

./: .gitignore  1.txt  README.md  pyproject.toml  test.txt
deploy/triton/model_repository/wavlm_emotion/: config.pbtxt
docker/: README.md  docker-compose.yml
scripts/: export_emotion_onnx.py  mp3_to_wav.py
src/voiceai/: api.py  audio.py  cli.py  diarization.py  emotion.py  emotion_api.py  output.py  profanity.py  transcribe.py  vLLM.py
