[project]
name = "dir1"
version = "0.1.0"
description = "FastAPI-сервис транскрибации диалогов: Whisper (vLLM) + диаризация спикеров"
readme = "README.md"
authors = [
    { name = "viktor-kirshin" }
]
requires-python = "==3.13.*"
dependencies = [
    "fastapi>=0.136.3",
    "openai>=2.40.0",
    "pyannote.audio>=4.0",
    "python-multipart>=0.0.30",
    "transformers>=5.10.2",
    "uvicorn[standard]>=0.48.0",
]

[project.scripts]
voiceai = "voiceai.api:run"

[build-system]
requires = ["uv_build>=0.10.11,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "voiceai"
module-root = "src"
